[package]
name = "deterministic-zip"
version = "0.1.0"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
zip = { version = "0.5.3", features = [ "deflate", "bzip2" ] }
walkdir = "2.2.9"

[profile.release]
lto = true

[dev-dependencies]
tempfile = "3.1.0"
