[package]
name = "deterministic-zip"
version = "0.0.5-alpha.0"
readme = "README.md"
repository = "https://github.com/orf/deterministic-zip"
authors = ["Tom Forbes <tom@tomforb.es>"]
edition = "2018"
description = "A tool to generate consistent Zip files."
license = "MIT"
categories = [
    "development-tools",
]
keywords = ["cli"]
exclude = [".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
zip = { version = "0.5.6", features = [ "deflate", "bzip2" ] }
walkdir = "2.3.1"

[profile.release]
lto = true

[dev-dependencies]
tempfile = "3.1.0"
sha2 = "0.9.0"

